netcfg (0.55) UNRELEASED; urgency=low

  * Translations:
    - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po)
    - Jordi Mallach: Updated Catalan translation (ca.po)

 -- Kęstutis Biliūnas <kebil@kaunas.init.lt>  Thu, 11 Mar 2004 15:17:14 +0200

netcfg (0.54) unstable; urgency=low

  * Strip the binaries again. 

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:38:56 -0500

netcfg (0.53) unstable; urgency=low

  * Fix dhcp killer to not segfault if the pid is < 1000 or > 9999.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:01:06 -0500

netcfg (0.52) unstable; urgency=low

  * Joey Hess
    - Fix "search (null)" in /etc/resolv.conf, again, sigh.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:19:30 -0500

netcfg (0.51) unstable; urgency=low

  * Joey Hess
   - Clarify the DHCP retry message to make better sense if you don't know
     what DHCP is.
   - Kill dhcp client before beginning static network config, to keep the
     memory footprint as low as possible.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by Philippe Batailler
    - Hungarian (hu.po) by VERÓK István
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Bokmal, Norwegian (nb.po) by Axel Bojer
    - Dutch (nl.po) by Bart Cornelis
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Albanian (sq.po) by Elian Myftiu
    - Swedish (sv.po) by André Dahlqvist
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov